# Oracle-Cloud-Ampere-A1

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.full.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/server/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/server/alembic/: env.py  script.py.mako
apps/server/alembic/versions/: 1b9a876eab13_domain_models.py  7c268f67372f_initial.py  a1b2c3d4e5f6_multiuser_auth.py  b2c3d4e5f6a7_key_db_encryption.py  e4c7ad0c4321_log_entry.py
apps/server/src/app/: __init__.py  cli.py  config.py  log_bus.py  logging_config.py  main.py
apps/server/src/app/api/: __init__.py  attempts.py  auth.py  channels.py  configs.py  credentials.py  deps.py  errors.py  logs.py  meta.py  ratelimit.py  status.py  users.py
apps/server/src/app/db/: models.py  session.py
apps/server/src/app/schemas/: __init__.py  attempt.py  channel.py  config.py  credential.py  meta.py  status.py
apps/server/tests/: conftest.py
apps/server/tests/api/: test_attempts.py  test_auth.py  test_auth_ratelimit.py  test_auth_register.py  test_auth_setup.py  test_channels.py  test_configs.py  test_cors.py  test_credentials.py  test_errors.py  test_healthz.py  test_logs.py  test_logs_stream.py  test_meta.py  test_ownership_scope.py  test_query_scope.py  test_status.py  test_users.py
apps/server/tests/integration/: test_poller_supervisor.py  test_restart_resume.py
apps/server/tests/unit/: test_config.py  test_env_loading.py  test_log_bus.py  test_logging.py  test_logging_bootstrap.py  test_rate_limit_storage.py
(+271 files in other folders)
